fix(ai): agent deep-link corrections, DPR/supervisor usability, budget race
AI agent platform bug-fix pass (in-app tester feedback):
- Baseline Intelligence: repoint Health Score -> /schedule-health and
  Compression Opportunity -> /schedule-compression; relabel the
  activity-editing findings' chip "Schedule" -> "Activities" (context-driven,
  not a blanket /schedule-health redirect).
- Role Briefings: finding refs now pass null linkUrl so clicks route through
  the in-page scroll+highlight (goToFinding) path instead of a no-op link to
  the current page — matches ExecutiveInsights.
- DPR Intelligence: expand "SLA" -> Service Level Agreement, spell out hour
  units, "Oldest pending DPR", and ?focus=/?view=approvals deep-links.
- Planning/GIS/Document Intelligence: corrected schedule/gis/permit deep-links.
- Labour Cost Intelligence: point to Operational Insights (numbers tally).
- Supervisor Performance: all-supervisor comparison + canonical efficiency
  via CapacityUtilizationProvider (aggregate-then-divide).
- Finding stat tiles keep their unit; briefing ticker skips dates.
- Budget guard: insertIfAbsent (ON CONFLICT DO NOTHING) + re-read to fix the
  uq_agent_budget_scope_date race on concurrent sweeps.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>